@@ -23,6 +23,15 @@ endif::[]
 
 https://github.com/elastic/apm-agent-go/compare/v1.8.0...master[View commits]
 
+- module/apmgoredisv8: introduce new package to support go-redis v8 {pull}780[#(780)]
+- module/apmhttp: introduce httptrace client option {pull}788[#(788)]
+- module/apmsql: add support for database/sql/driver.Validator {pull}791[#(791)]
+- Record sample rate on transactions and spans, propagate through `tracestate` {pull}804[#(804)]
+- module/apmredigo: change redigo dependency to v1.8.2 {pull}807[#(807)]
+- Deprecate IGNORE_URLS, replace with TRANSACTION_IGNORE_URLS {pull}811[(#811)]
+- Tracer.Close now waits for the transport goroutine to end before returning {pull}816[#(816)]
+- Relax Kubernetes pod UID discovery rules {pull}819[#(819)]
+
 [[release-notes-1.x]]
 === Go Agent version 1.x
 
